--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 rocket = { version = "0.5.1", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
-
+diesel = { version = "2.2.0", features = ["postgres", "sqlite"] }
+dotenvy = "0.15"
