--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "rust-lang.rust-analyzer",
-    "rust-analyzer.cargo.features": ["rust_analyzer_only"]
+    "rust-analyzer.cargo.features": []
 }
